--- a/rviz_telop_commander/package.xml
+++ b/rviz_telop_commander/package.xml
@@ -63,6 +63,6 @@
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
-
+    <rviz plugin="${prefix}/plugin_description.xml"/>
   </export>
 </package>
