--- a/.gitignore
+++ b/.gitignore
@@ -390,4 +390,45 @@ compile_commands.json
 # QtCreator local machine specific files for imported projects
 *creator.user*
 
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+# Kernel Module Compile Results
+*.mod*
+*.cmd
+.tmp_versions/
+modules.order
+Module.symvers
+Mkfile.old
+dkms.conf
+
+
+# Visual Studio
+.vs/
+x64/
+*.vcxproj.filters
+*.vcxproj.user
 *.bak
