--- a/apArchitect/home3dataCollectStore/Client/Client.vcxproj
+++ b/apArchitect/home3dataCollectStore/Client/Client.vcxproj
@@ -139,7 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Shared\BigFile.cpp" />
     <ClCompile Include="Client.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Shared\BigFile.h" />
+    <ClInclude Include="..\Shared\md5.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
