--- a/apArchitect/home3dataCollectStore/Client/Client.vcxproj
+++ b/apArchitect/home3dataCollectStore/Client/Client.vcxproj
@@ -56,6 +56,7 @@
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
   <ImportGroup Label="Shared">
+    <Import Project="..\SharedCode\SharedCode.vcxitems" Label="Shared" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -139,12 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\Shared\BigFile.cpp" />
     <ClCompile Include="Client.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\Shared\BigFile.h" />
-    <ClInclude Include="..\Shared\md5.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
