--- a/apArchitect/home3dataCollectStore/Server/Server.vcxproj
+++ b/apArchitect/home3dataCollectStore/Server/Server.vcxproj
@@ -140,10 +140,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BigFileServer.cpp" />
     <ClCompile Include="ControlFile.cpp" />
     <ClCompile Include="Server.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BigFileServer.h" />
     <ClInclude Include="ControlFile.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
