Add "Building Java & JVM projects"

--- a/java/gradleAppLib/buildSrc/src/main/groovy/gradleapplib.java-common-conventions.gradle
+++ b/java/gradleAppLib/buildSrc/src/main/groovy/gradleapplib.java-common-conventions.gradle
@@ -26,3 +26,10 @@ tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
 }
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
