--- a/java/gradleAppLib/settings.gradle
+++ b/java/gradleAppLib/settings.gradle
@@ -8,4 +8,5 @@
  */
 
 rootProject.name = 'gradleAppLib'
-include('app', 'list', 'utilities', 'lib2')
+include('app',  'list', 'utilities', 'lib2')
+include('app2', 'list', 'utilities', 'lib2')
