--- a/java/AndroidRos/app/build.gradle
+++ b/java/AndroidRos/app/build.gradle
@@ -3,12 +3,12 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.ledsmart.androidros"
         minSdk 22
-        targetSdk 31
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -28,7 +28,7 @@ android {
 }
 
 dependencies {
-
+    //implementation 'org.ros.android_core:android_10:[0.3,0.4)'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
