--- a/java/AndroidRos/build.gradle
+++ b/java/AndroidRos/build.gradle
@@ -1,4 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+/*buildscript {
+    apply from: resources.text.fromInsecureUri("http://192.168.3.250:3000/ROS1/rosjavaraw/src/branch/master/android_core/raw/melodic/buildscript.gradle")
+}*/
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
@@ -7,3 +10,20 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+/*
+subprojects {
+    apply plugin: 'ros-android'
+
+    afterEvaluate { project ->
+        android {
+            // Exclude a few files that are duplicated across our dependencies and
+            // prevent packaging Android applications.
+            packagingOptions {
+                exclude "META-INF/LICENSE.txt"
+                exclude "META-INF/NOTICE.txt"
+            }
+        }
+    }
+}
+*/
